cip-macros/tests/ui/cip_instance_missing_class_id.stderr
error: A struct must have a field 'class_id: ClassCode' to use #[cip_instance]
  --> tests/ui/cip_instance_missing_class_id.rs:13:8
   |
13 | struct MyInstance {
   |        ^^^^^^^^^^

error[E0615]: attempted to take value of method `class_id` on type `&MyInstance`
  --> tests/ui/cip_instance_missing_class_id.rs:12:1
   |
12 | #[cip_instance]
   | ^^^^^^^^^^^^^^^ method, not a field
   |
   = note: this error originates in the attribute macro `cip_instance` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use parentheses to call the method
   |
12 | #[cip_instance]()
   |                ++
